fixing align center

--- a/scss/_bscore_custom.scss
+++ b/scss/_bscore_custom.scss
@@ -18,6 +18,10 @@ pre {
   padding: 0rem;
 }
 
+.aligncenter {
+  display: table;
+}
+
 /// MOBILE VIEW
 
 @media (max-width: 768px) {
